<resources>
    <string name="app_name" translatable="false">ExchangeSumo</string>
    <string name="locale_name">Русский</string>

    <string name="apply">Применить</string>
    <string name="tooltip_search">Выберите направление обмена</string>
    <string name="error_network">Не удалось загрузить данные. Проверьте подключение к сети</string>

    <!--  Navigation Menu  -->
    <string name="nav_rates">Обменники</string>
    <string name="nav_double">Двойной обмен</string>
    <string name="nav_settings">Настройки</string>

    <!--  Search Fragment  -->
    <string name="search_title">Поиск</string>
    <string name="search_hint">Введите имя валюты</string>
    <string name="search_currency_in">Что отдаете</string>
    <string name="search_currency_out">Что получаете</string>
    <string name="search_confirm">Применить</string>

    <!--  Rates Fragment  -->
    <string name="rates_head_org">Обменник</string>
    <string name="rates_head_in">Отдаете</string>
    <string name="rates_head_out">Получите</string>
    <string name="rates_head_fund">Резерв</string>
    <string name="rates_nothing">Обменники не найдены\n\n\nВыберите направление, нажав на иконку [img] вверху</string>

    <!--  Rates Bottom Sheet  -->
    <string name="rates_badge_manual">Ручной или полуавтоматический режим</string>
    <string name="rates_badge_mediator">Использует сторонние платежные системы</string>
    <string name="rates_badge_card_verify">Требуется верификация карты</string>
    <string name="rates_goto_exchange">Перейти к обмену</string>
    <string name="rates_goto_info">Информация об обменнике</string>

    <!--  Exchanger fragment  -->
    <string name="exchanger_title">Детали обменника</string>
    <string name="exchanger_status">Статус</string>
    <string name="exchanger_fund">Сумма резервов</string>
    <string name="exchanger_age">Возраст</string>
    <string name="exchanger_country">Страна</string>
    <string name="exchanger_website">Сайт</string>
    <string name="exchanger_reviews">Отзывы</string>
    <string name="exchanger_reviews_last">Последние отзывы</string>

    <!--  Double Exchange Fragment  -->
    <string name="double_head_in">Отдаете</string>
    <string name="double_head_transit">Транзитная валюта</string>
    <string name="double_head_out">Получите</string>
    <string name="double_head_course">Курс</string>

    <!--  Double Exchange Bottom Sheet  -->
    <string name="double_step_first">Шаг 1</string>
    <string name="double_step_second">Шаг 2</string>
    <string name="double_btn_goto">Обменять</string>

    <!--  Calculation dialog  -->
    <string name="calc_title">Калькулятор</string>
    <string name="calc_amount_in">Хочу отдать</string>
    <string name="calc_amount_out">Хочу получить</string>
    <string name="calc_amount">Сумма</string>

    <!--  Rate Item  -->
    <string name="rate_item_from">от\ </string>

    <!--  Settings Fragment  -->
    <string name="settings_about">О приложении</string>
    <string name="settings_locale">Язык</string>
    <string name="settings_theme">Темная тема</string>

    <!--  About Fragment  -->
    <string name="about_version">Версия</string>
    <string name="about_license">Лицензия</string>
    <string name="about_contacts">Контакты</string>
    <string name="about_terms">Условия использования</string>
    <string name="about_privacy">Политика конфиденциальности</string>
    <string name="about_partner">Сайт ExchangeSumo</string>
    <string name="about_sources">Исходный код</string>
    <string name="about_contacts_copied">Контакт скопирован</string>
    <string name="about_contacts_value" translatable="false">imnanit@gmail.com</string>
    <string name="about_license_value" translatable="false">GNU General Public License v3</string>
    <string name="about_privacy_url" translatable="false">https://nan1t.github.io/exchange-sumo/privacy.html</string>
    <string name="about_source_url" translatable="false">https://github.com/Nan1t/ExchangeSumo</string>
    <string name="about_partner_url" translatable="false">https://exchangesumo.com/?partner=2554-20902</string>

    <!--  Terms And Conditions Dialog  -->

    <string name="terms_ok">OK</string>
    <string name="terms_website">Посетить сайт</string>
    <string name="terms_text">"Это приложение для быстрого поиска валютных обменников с самым выгодным курсом.

Автор приложения не имеет никакого отношения к сервису ExchangeSumo.

Приложение отображает данные из открытых и доступных для каждого источников.
Эти данные включают в себя списки обменников, курсы валют, ссылки, изображения, отзывы пользователей.

Автор приложения не может гарантировать надежность отображаемых обменников и ваших сделок, и не несет за них ответственность.
Это может делать ресурс, который предоставляет данные, отображаемые приложением.

В свою очередь, пользователь вправе требовать от автора, чтобы в приложении присутствовали заявленные функции, и их работа была корректной.

По всем вопросам пишите на imnanit@gmail.com

Приятного использования :)"</string>
</resources>