<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <Preference
        android:key="version"
        android:title="@string/about_version"
        android:summary="[version]"
        app:iconSpaceReserved="false" />

    <Preference
        android:key="license"
        android:title="@string/about_license"
        android:summary="@string/about_license_value"
        app:iconSpaceReserved="false" />

    <Preference
        android:key="contacts"
        android:title="@string/about_contacts"
        android:summary="@string/about_contacts_value"
        app:iconSpaceReserved="false" />

    <Preference
        android:key="partner"
        android:title="@string/about_partner"
        app:iconSpaceReserved="false" />

    <Preference
        android:key="tos"
        android:title="@string/about_terms"
        app:iconSpaceReserved="false" />

    <Preference
        android:key="sources"
        android:title="@string/about_sources"
        app:iconSpaceReserved="false" />

</PreferenceScreen>