<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="5dp">

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="50"
            android:hint="@string/rates_head_in">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/rates_currency_in"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:clickable="false"
                android:cursorVisible="false"
                android:focusable="false"
                android:focusableInTouchMode="false"/>
        </com.google.android.material.textfield.TextInputLayout>

        <ImageButton
            android:id="@+id/rates_btn_swap"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:background="@drawable/ic_baseline_swap" />

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="50"
            android:hint="@string/rates_head_out">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/rates_currency_out"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:clickable="false"
                android:cursorVisible="false"
                android:focusable="false"
                android:focusableInTouchMode="false"/>
        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="12dp"
        android:background="@color/secondaryColor">

        <TextView
            style="@style/TableText.Header"
            android:id="@+id/rates_table_head_org"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="50"
            android:text="@string/rates_head_org"/>

        <TextView
            style="@style/TableText.Header"
            android:id="@+id/rates_table_head_in"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="25"
            android:gravity="center"
            android:text="@string/rates_head_in"/>

        <TextView
            style="@style/TableText.Header"
            android:id="@+id/rates_table_head_out"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="25"
            android:gravity="center"
            android:text="@string/rates_head_out"/>
    </LinearLayout>

    <TextView
        android:visibility="gone"
        android:id="@+id/rates_list_nothing_test"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_gravity="center"
        android:text="@string/rates_nothing"/>

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/rates_swipe_refresh"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="90">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rates_list"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:listitem="@layout/item_rate"/>

    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
</LinearLayout>