<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/search_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />

    <RadioGroup
        android:id="@+id/search_radio_group"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/search_radio_in"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/calc_amount_in" />

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/search_radio_out"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/calc_amount_out" />
    </RadioGroup>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:id="@+id/rates_amount_layout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:hint="@string/calc_amount"
        app:layout_constraintBottom_toBottomOf="@+id/search_radio_group"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/search_guideline"
        app:layout_constraintTop_toTopOf="@+id/search_radio_group">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/rates_amount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number" />
    </com.google.android.material.textfield.TextInputLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/search_radio_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/search_calc_commissions"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            app:layout_constraintBottom_toBottomOf="@+id/search_calc_commissions"
            app:layout_constraintStart_toEndOf="@+id/search_calc_commissions"
            app:layout_constraintTop_toTopOf="@+id/search_calc_commissions"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/calc_commissions"
            android:textColor="@color/black" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>