<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/double_bottom_sheet"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:behavior_peekHeight="500dp"
        app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">

        <!--    FIRST STEP    -->

        <TextView
            android:id="@+id/double_title_step1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:gravity="center"
            android:text="@string/double_step_first"
            android:textSize="20sp"
            android:textStyle="bold" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_weight="33">

                <TextView
                    android:id="@+id/double_first_from_amount"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:textSize="18sp"
                    tools:text="9999999" />

                <TextView
                    android:id="@+id/double_first_from_currency"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:textSize="12sp"
                    tools:text="CURRENCY" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_weight="33">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_baseline_arrow_right"/>

                <TextView
                    android:id="@+id/double_first_exchanger"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:padding="10dp"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    tools:text="Exchanger name" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_weight="33">

                <TextView
                    android:id="@+id/double_first_to_amount"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:textSize="18sp"
                    tools:text="9999999" />

                <TextView
                    android:id="@+id/double_first_to_currency"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:textSize="12sp"
                    tools:text="CURRENCY" />
            </LinearLayout>
        </LinearLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/double_first_btn_exchange"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/double_btn_goto"
            app:icon="@drawable/ic_baseline_currency_exchange"
            app:iconGravity="textStart" />

        <!--    SECOND STEP    -->

        <TextView
            android:id="@+id/double_second_step1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:gravity="center"
            android:text="@string/double_step_second"
            android:textSize="20sp"
            android:textStyle="bold" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_weight="33">

                <TextView
                    android:id="@+id/double_second_from_amount"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:textSize="18sp"
                    tools:text="9999999" />

                <TextView
                    android:id="@+id/double_second_from_currency"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:textSize="12sp"
                    tools:text="CURRENCY" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_weight="33">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_baseline_arrow_right"/>

                <TextView
                    android:id="@+id/double_second_exchanger"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:padding="10dp"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    tools:text="Exchanger name" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_weight="33">

                <TextView
                    android:id="@+id/double_second_to_amount"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:textSize="18sp"
                    tools:text="9999999" />

                <TextView
                    android:id="@+id/double_second_to_currency"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:textSize="12sp"
                    tools:text="CURRENCY" />
            </LinearLayout>
        </LinearLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/double_second_btn_exchange"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/double_btn_goto"
            app:icon="@drawable/ic_baseline_currency_exchange"
            app:iconGravity="textStart" />
    </LinearLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>